@@ -43,7 +43,7 @@ namespace video
 		virtual bool beginScene(bool backBuffer, bool zBuffer, SColor color);
 
 		//! applications must call this method after performing any rendering. returns false if failed.
-		virtual bool endScene( s32 windowId, core::rect<s32>* sourceRect=0 );
+		virtual bool endScene(s32 windowId=0, core::rect<s32>* sourceRect=0);
 
 		//! queries the features of the driver, returns true if feature is available
 		virtual bool queryFeature(E_VIDEO_DRIVER_FEATURE feature) const;
